<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WhooChoo</string>
    <string name="exit">Exit</string>
    <string name="ok">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="is_exit">Do you want to exit?</string>
    <string name="authorizing">Authorizing&#8230;</string>
    <string name="msg_auth_success">Authorization is succeed!</string>
    <string name="msg_auth_fail">Authorization is failed!</string>
    <string name="main_title">WhooChoo</string>
    <string name="accounts_assets">Assets</string>
    <string name="accounts_liabilities">Liabilities</string>
    <string name="accounts_capital">Capital</string>
    <string name="accounts_income">Income</string>
    <string name="accounts_expenses">Expenses</string>
    
    <!-- Common Text -->
    <string name="total_assets">Total Assets</string>
    <string name="total_liabilities">Total Liabilities</string>
    <string name="total_capital">Total Capital</string>
    <string name="total_expenses">Total Expenses</string>
    <string name="total_income">Total Income</string>
    <string name="text_item">Item</string>
    <string name="text_account">Account</string>
    <string name="text_amount">Amount</string>
    <string name="text_left">Left</string>
    <string name="text_right">Right</string>
    <string name="text_date">Date</string>
    <string name="text_change">Change</string>
    <string name="text_search">Search</string>
    <string name="text_add_transaction">Add Transaction</string>
    <string name="text_expenses">Expenses</string>
    <string name="text_income">Income</string>
    <string name="text_etc">Etc</string>
    <string name="text_budget">Budget</string>
    <string name="text_remains">Remains</string>
    <string name="text_loading">Loading</string>
    <string name="text_doubt">Doubt</string>
    <string name="text_expenses_budget">Expenses Budget</string>
    <string name="text_bill">Bill</string>
    <string name="text_total_amount">Total Amount</string>
    <string name="text_post_it">Post it!</string>
    <string name="text_free_board">Free Board</string>
    <string name="text_free_finance">Finance Board</string>
    <string name="text_free_counseling">Counseling Board</string>
    <string name="text_free_support">Support Board</string>
    <string name="text_write_reply">Write Reply</string>
    <string name="text_confirm">Confirm</string>
    <string name="text_me">Me</string>
    <string name="text_modify">Modify</string>
    <string name="text_delete">Delete</string>
    <string name="text_complete">Complete</string>
    <string name="text_currency">Currency</string>
    <string name="text_country">Country</string>
    <string name="text_check">Check</string>
    <string name="text_about">About</string>
    <string name="text_deleting">Deleting&#8230;</string>
    <string name="text_subject">Subject</string>
    <string name="text_content">Content</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_next">Next</string>
    <string name="text_okay">OK</string>
    <string name="text_inform">Inform</string>
    <string name="text_memo">Memo</string>
    <string name="text_category">Category</string>
    <string name="text_deactivate">Deactivate</string>
    <string name="text_deleted">Deleted</string>
    <string name="text_zero">0</string>
    
    <!-- Dashboard -->
    <string name="dashboard_more">More&#8230;</string>
    <string name="dashboard_monthly_budget">Monthly Budget</string>
    <string name="dashboard_compare_last_month">Compared with Last Month</string>
    
    <!-- Balance fragment -->
    <string name="balance_label_account">Account</string>
    <string name="balance_label_amount">Amount</string>
    
    <!--  Left Sliding menu -->
    <string name="left_menu_category_report">Report</string>
    <string name="left_menu_category_tool">Tool</string>
    <string name="left_menu_category_comm">Communication</string>
    <string name="left_menu_item_history">History</string>
    <string name="left_menu_item_exp_budget">Expenses Budget</string>
    <string name="left_menu_item_credit">Credit Cards</string>
    <string name="left_menu_item_balance">Balance</string>
    <string name="left_menu_item_profit_loss">Profit/Loss</string>
    <string name="left_menu_item_mountain">Mountain</string>
    <string name="left_menu_item_board_free">Free Board</string>
    <string name="left_menu_item_board_finance">Finance</string>
    <string name="left_menu_item_board_counseling">Counseling</string>
    <string name="left_menu_item_board_support">Support</string>
    <string name="left_menu_item_post_it">Post it!</string>
    <string name="left_menu_item_dashboard">Dashboard</string>
    <string name="left_menu_item_home">Home</string>
    
    
    <!-- Exp. Budget -->
    <string name="exp_budget_budget_exp">Spent/Budget</string>
    
    <!-- Bill -->
    <string name="bill_amount_due">Amount Due</string>
    
    <!-- Postit -->
    <string name="post_it_question_delete">Really?</string>
    
    <!-- Transaction Add -->
    <string name="add_transaction_add_complete">Add complete</string>
    <string name="add_transaction_add">Add</string>
    <string name="add_transaction_msg_same">Left and Right are the same</string>
    <string name="add_transaction_msg_check_lr">Check left or right</string>
    <string name="add_transaction_msg_check_amount">Check amount</string>
    
    
    <!-- User Account -->
    <string name="user_info_timezone">Timezone</string>
    <string name="user_info_locale_language">Language(for Date formatting, Board)</string>
    <string name="user_info_username_hint">Nick name here</string>
    <string name="user_info_username_optional">User Name(Optional)</string>
    <string name="user_info_progress">Loading User Information</string>
    <string name="user_info_alert_country">Please select country.</string>
    <string name="user_info_alert_language">Please select language.</string>
    <string name="user_info_alert_name_taken">The nickname is already taken</string>
    <string name="user_info_alert_name_ok">You can use the nickname</string>
    <string name="user_info_alert_check_name">Please check the name</string>
    
    
    <!-- About dialog  -->
    <string name="about_app_desc">This is 3rd party application of Whooing.com. This application does not contain any information about you without language, currency.</string>
    <string name="about_app_contact_whooing">Contact to Whooing</string>
    <string name="about_app_contact_whooing_email">support@whooing.com</string>
    <string name="about_app_contact_developer">Contact to App developer</string>
    <string name="about_app_contact_developer_email">peashellapps@gmail.com</string>
    <string name="about_app_whooing_url">Website : http://whooing.com</string>
    <string name="about_app_blog">Blog : http://peashellapps.wordpress.com</string>
    <string name="about_app_creator">Created by Peashell Apps.</string>
    <string name="about_app_send_email">Choose Email Client</string>
    <string name="about_app_version">Version : </string>
    
    <!-- BBS -->
    <string name="bbs_deleted">The article is deleted.</string>
    <string name="bbs_delete_alert_message">Really delete?</string>
    <string name="bbs_delete_alert_title">Delete Confirm</string>
    <string name="bbs_write_fill_subject">Please fill subject</string>
    <string name="bbs_write_fill_content">Please fill content</string>
    <string name="bbs_article_post_modified">The post is modified.</string>
    <string name="bbs_article_post_deleted">The post is deleted.</string>
    <string name="bbs_article_inform_fill_contents">Please fill the content.</string>
    
    <!-- Welcome -->
    <string name="welcome_msg">Welcome,\nThis is Whooing.</string>
    <string name="welcome_no_internet">No network connection. Please check your network connectivity.</string>
    <string name="welcome_no_internet_title">Alert</string>
    <string name="welcome_loading_get_user_info">Getting User Info&#8230;</string>
    <string name="welcome_loading_get_transaction">Getting Transactions&#8230;</string>
    <string name="welcome_loading_get_account_info">Getting Account Info&#8230;</string>
    <string name="welcome_loading_get_data">Getting Data&#8230;</string>
    <string name="welcome_logging_in">Logging in&#8230;</string>
    
    <!-- Auth -->
    <string name="auth_doing">▶</string>
    
    <!-- Global Alert -->
    <string name="global_no_api_inform">Sorry. There are no remaining APIs, but you can everything without reporting. The given APIs are filled again at GMT 0:00. This app, the 3rd party application, just follows Whooing\'s policy.</string>
    <string name="global_no_api_inform_title">Not enough APIs</string>
    <string name="global_go_setting_whooing">Since There are complicated issues, Setting menu is not available in this version. I will support it in next version.</string>
    <string name="alert_go_setting_whooing_btn">Go to Whooing</string>
    
    <!-- Account Setting -->
    <string name="account_setting_add_assets">+ Add Assets Account</string>
    <string name="account_setting_add_liabilities">+ Add Liabilities Account</string>
    <string name="account_setting_add_capital">+ Add Capital Account</string>
    <string name="account_setting_add_expenses">+ Add Expenses Account</string>
    <string name="account_setting_add_income">+ Add Income Account</string>
    <string name="account_setting_modify_activate_date">Activation Date</string>
    <string name="account_setting_modify_account_title">Account title</string>
    <string name="account_setting_modify_deactivate_date">Deactivation Date</string>
    <string name="account_setting_modify_billing_period">Billing Period</string>
    <string name="account_setting_modify_pay_date">Pay. Date</string>
    <string name="account_setting_modify_payment_account">Payment Account</string>
    <string name="account_setting_one_month">one month</string>
    <string name="account_setting_select">Select</string>
    <string name="account_setting_month_before_last">Month before last</string>
    <string name="account_setting_previous_month">Previous month</string>
    <string name="account_setting_msg_same">Nothing to change</string>
    <string name="account_setting_msg_fail_add_modify">Fail to add or modify account information. Please contact to developer.</string>
    <string name="account_setting_del_option1">(Recommended)Deactivate the account from %s </string>
    <string name="account_setting_del_option2">Disregard related %d transaction(s) and continue to delete.</string>
    <string name="account_setting_del_msg">This account is involved in transaction(s). Please choose one of the following : </string>
    <string name="account_setting_del_msg_really_delete">Really delete?</string>
    <string name="account_setting_msg_close">Deactivate - Click "Confirm" to apply</string>
    <string name="account_setting_del_unavailable">Unavailable to delete. Only this account is remain in the account type.</string>
        
    <!-- SMS -->
    <string name="sms_set_expense">Set Exp.</string>
    <string name="sms_toast_no_set_expense">Please select expense account</string>
    <string name="sms_notification_msg"> new transaction(s) added</string>
    <string name="sms_no_received">No received card transaction alarm SMS</string>
    <string name="sms_toast_no_item_string">Please fill item</string>
    
    <!-- Content Description -->
    <string name="desc_imgbtn_delete">Delete</string>
    <string name="desc_imgbtn_modify">Modify</string>
    <string name="desc_imgbtn_calendar">Calendar</string>
    <string name="desc_img_possibility">Possibility to archive object</string>
    <string name="desc_img_sms">SMS</string>
    <string name="desc_img_arrow">Arrow</string>
    
    
</resources>