<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2013 Jongha Kim

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E5E5"
    android:orientation="vertical"
    android:padding="10dp" >

    <net.wisedog.android.whooing.widget.WiTextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/text_about"
        android:textColor="#333333"
        android:textSize="24sp" />

    <net.wisedog.android.whooing.widget.WiTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/about_app_desc"
        android:textColor="#777777"
        android:textSize="18sp" />

    <net.wisedog.android.whooing.widget.WiTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/about_app_contact_developer"
        android:textColor="#333333"
        android:textSize="20sp" />

    <Button
        android:id="@+id/about_btn_contact_developer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_app_contact_developer_email" />

    <net.wisedog.android.whooing.widget.WiTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:autoLink="web"
        android:text="@string/about_app_blog"
        android:textColor="#333333"
        android:textSize="14sp" />

    <net.wisedog.android.whooing.widget.WiTextView
        android:id="@+id/about_app_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:autoLink="web"
        android:textColor="#333333"
        android:textSize="20sp" />

    <net.wisedog.android.whooing.widget.WiTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:text="@string/about_app_creator"
        android:textColor="#333333"
        android:textSize="16sp" />

    <net.wisedog.android.whooing.widget.WiTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/about_app_contact_whooing"
        android:textColor="#333333"
        android:textSize="20sp" />

    <Button
        android:id="@+id/about_btn_contact_whooing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/about_app_contact_whooing_email" />

    <net.wisedog.android.whooing.widget.WiTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:autoLink="web"
        android:text="@string/about_app_whooing_url"
        android:textColor="#333333"
        android:textSize="16sp" />

</LinearLayout>