<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/post_it_article_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine" 
			android:enabled="false"
        android:layout_margin="10dp">

    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right" >

        <ProgressBar
            android:id="@+id/post_it_article_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:visibility="invisible"/>

        <Button
            android:id="@+id/post_it_article_btn_modify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/desc_imgbtn_modify"
            android:text="@string/text_modify" />

        <Button
            android:id="@+id/post_it_article_btn_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/desc_imgbtn_delete"
            android:text="@string/text_delete" />

        <Button
            android:id="@+id/post_it_article_btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/desc_imgbtn_delete"
            android:text="@string/text_confirm" />
    </LinearLayout>

</LinearLayout>