<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="vertical" >

    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accounts_assets"
        android:id="@+id/accounts_selection_title_assets"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginBottom="5dip"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/accounts_selection_assets"
        android:layout_marginBottom="10dip">
        
    </LinearLayout>
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accounts_liabilities"
        android:id="@+id/accounts_selection_title_liabilities"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginBottom="5dip"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/accounts_selection_liabilities"
        android:layout_marginBottom="10dip">
        
    </LinearLayout>
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accounts_capital"
        android:id="@+id/accounts_selection_title_capital"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginBottom="5dip"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/accounts_selection_capital"
        android:layout_marginBottom="10dip">
        
    </LinearLayout>
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accounts_income"
        android:id="@+id/accounts_selection_title_income"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginBottom="5dip"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/accounts_selection_income"
        android:layout_marginBottom="10dip">
        
    </LinearLayout>
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accounts_expenses"
        android:id="@+id/accounts_selection_title_expenses"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginBottom="5dip"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/accounts_selection_expenses"
        android:layout_marginBottom="10dip">
    </LinearLayout>
    

</LinearLayout>